[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attenlabs-sas-demo"
version = "0.1.0"
description = "CLI demo for attenlabs-sas: streams microphone and webcam to the SD Attention Server and routes detected speech through OpenAI Realtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "attenlabs-sas>=0.1.0",
    "cv2-enumerate-cameras",
]

[tool.setuptools]
py-modules = ["main", "llm"]
